--- a/myExpenses.html
+++ b/myExpenses.html
@@ -4,6 +4,8 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<!-- -----------Above meta tag for responsiveness----------------- -->
 <title>my Expenses</title>
 <link rel="stylesheet" type="text/css" href="bootstrap.css">
 <!-- <link rel="stylesheet" type="text/css" href="myStyle.css"> -->
