--- a/myExpenses.html
+++ b/myExpenses.html
@@ -91,14 +91,15 @@ body{ background: lightgray; }
 
 
 <div id="output-div" class="card  border p-2 shadow-lg">
-    <div  class="" style="text-align: left; font-size: .8em;text-transform: uppercase;" id="mydate">06 August 2021</div>
-    <div style="display:flex; justify-content:space-between;" id="myTitle" style="text-align:left;font-weight:900; padding: 3px;"><span>myTitle</span>
-      <div><span>Rs.</span>&nbsp;<span id="rupee" style="font-weight:700;font-size: 1em;">400</span></div>
+    <div  class="" style="text-align: left; font-size: .8em;text-transform: uppercase;" id="mydate"><!-- 06 August 2021 --></div>
+    <div style="display:flex; justify-content:space-between;" id="myTitle" style="text-align:left;font-weight:900; padding: 3px;"><span><!-- myTitle --></span>
+
+      <div id="rupee"></div>
       </div>
 
-    <div style="text-align: left;">
-            <!-- <span style="font-weight: 700; padding:3px">NOTE:</span> -->
-            <span id="myNote">myNote</span>
+    <div id="myNote" style="text-align: left;">
+            note
+            
     </div>
 
 </div>
@@ -120,6 +121,7 @@ body{ background: lightgray; }
                  let myNote=document.getElementById('myNote').value;
                  let res=document.getElementById('rupee').value;
                  console.log(res);
+                 
 
 
           	  	  if(titleValue==""){
@@ -136,7 +138,7 @@ body{ background: lightgray; }
               document.getElementById('myTitle').innerHTML=titleValue;
               document.getElementById('mydate').innerHTML=dateValue;
               document.getElementById('myNote').innerText=myNote;
-              document.getElementById('res').innerHTML=res;
+              document.getElementById('rupee').innerHTML=res;
 
 
           	  }
