worked on validation area

--- a/myExpenses.html
+++ b/myExpenses.html
@@ -98,7 +98,7 @@ body{ background: lightgray; }
       </div>
 
     <div id="myNote" style="text-align: left;">
-            note
+            note <!-- -----------note------------------- -->
             
     </div>
 
