--- a/myExpenses.html
+++ b/myExpenses.html
@@ -173,7 +173,7 @@ body{ background: lightgray; }
 
               document.getElementById('myTitle').innerHTML=titleValue;
               document.getElementById('mydate').innerHTML=dateValue;
-              document.getElementById('myNote').innerText=myNote;
+              document.getElementById('note').innerText=myNote;
               // document.getElementById('rupee').innerHTML=res;
 
 
